--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "serve": "live-server public/",
     "build": "webpack",
-    "dev-server": "webpack-dev-server"
+    "dev-server": "webpack-dev-server",
+    "now-build": "webpack"
   },
   "dependencies": {
     "@babel/core": "^7.4.5",
